# ROS

./: .gitignore  README.md  ROS_GZ_Integration.ipynb  SimArchitecture.puml  SimPackage.puml
bag_files/rosbag2_2024_12_26-18_33_38/: metadata.yaml  rosbag2_2024_12_26-18_33_38_0.mcap
bag_files/rosbag2_2024_12_26-18_41_37/: metadata.yaml  rosbag2_2024_12_26-18_41_37_0.mcap
bag_files/rosbag2_2024_12_26-18_47_05/: metadata.yaml  rosbag2_2024_12_26-18_47_05_0.mcap
install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
install/turtle_simulation/lib/turtle_simulation/: turtle_control
install/turtle_simulation/share/turtle_simulation/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/car_bot/: package.xml  setup.cfg  setup.py
src/car_bot/launch/: carbot.launch.py
src/car_bot/model/: car_bot.urdf  car_robot.sdf  car_robot.urdf  model.config  model.sdf  world.sdf
src/car_bot/model/meshes/: base_link.STL  wheel1.STL  wheel2.STL  wheel3.STL  wheel4.STL
src/car_bot/model/meshes1/: CAR_BODY.stl  wheel1.STL  wheel4.STL
src/turtle_simulation/: SystemFlow.puml  package.xml  setup.py
src/turtle_simulation/launch/: turtle_gz.launch.py
src/turtle_simulation/models/turtlebot/: Car_Bot.sdf  Car_Bot.urdf  CustomClient.config  fuel_preview.sdf  model.config  model.sdf  model1.sdf
src/turtle_simulation/models/turtlebot/meshes/: base_link.STL  wheel2.STL  (+1 more)
src/turtle_simulation/plugins/: CMakeLists.txt  ControlPanelGUIPlugin.cc  package.xml
src/turtle_simulation/turtle_simulation/: control_panel.py  world_demo.sdf
(+2 files in other folders)
