<?xml version="1.0"?>
<package format="3">
  <name>my_gazebo_plugin</name>
  <version>0.1.0</version>
  <description>Gazebo GUI Plugin for robot control</description>
  <maintainer email="zahid@nextaisense.com">zahid</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>gz-gui8</depend>
</package>
